updates to home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <h1><center>Tweet Mood Analyzer</center></h1>
 <br>
 <br>
-<form action="{{ url_for('analyze_tweet' }}" method="post">
+<form action="{{ url_for('analyze_tweet') }}" method="post">
 	<center><h3> Please enter a tweet below </h3></center>
 	<br>
 	<center><input type="text" id="tweet" name="tweet"></center>
